# Sensor-UA

./: CMakeLists.txt
resources/: LICENSE.txt  app.rc  version.h
src/: main.cpp
